Derive state-wide summary statistics for our market segment

--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -3387,9 +3387,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>resorts_per_state</th>\n",
+       "      <th>state_total_skiable_area_ac</th>\n",
+       "      <th>state_total_days_open</th>\n",
+       "      <th>state_total_terrain_parks</th>\n",
+       "      <th>state_total_nightskiing_ac</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2280.0</td>\n",
+       "      <td>345.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>580.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1577.0</td>\n",
+       "      <td>237.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>80.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>California</td>\n",
+       "      <td>21</td>\n",
+       "      <td>25948.0</td>\n",
+       "      <td>2738.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>587.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Colorado</td>\n",
+       "      <td>22</td>\n",
+       "      <td>43682.0</td>\n",
+       "      <td>3258.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>428.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Connecticut</td>\n",
+       "      <td>5</td>\n",
+       "      <td>358.0</td>\n",
+       "      <td>353.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>256.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         state  resorts_per_state  state_total_skiable_area_ac  \\\n",
+       "0       Alaska                  3                       2280.0   \n",
+       "1      Arizona                  2                       1577.0   \n",
+       "2   California                 21                      25948.0   \n",
+       "3     Colorado                 22                      43682.0   \n",
+       "4  Connecticut                  5                        358.0   \n",
+       "\n",
+       "   state_total_days_open  state_total_terrain_parks  \\\n",
+       "0                  345.0                        4.0   \n",
+       "1                  237.0                        6.0   \n",
+       "2                 2738.0                       81.0   \n",
+       "3                 3258.0                       74.0   \n",
+       "4                  353.0                       10.0   \n",
+       "\n",
+       "   state_total_nightskiing_ac  \n",
+       "0                       580.0  \n",
+       "1                        80.0  \n",
+       "2                       587.0  \n",
+       "3                       428.0  \n",
+       "4                       256.0  "
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Code task 27#\n",
     "#Add named aggregations for the sum of 'daysOpenLastYear', 'TerrainParks', and 'NightSkiing_ac'\n",
@@ -3400,11 +3507,20 @@
     "state_summary = ski_data.groupby('state').agg(\n",
     "    resorts_per_state=pd.NamedAgg(column='Name', aggfunc='size'), #could pick any column here\n",
     "    state_total_skiable_area_ac=pd.NamedAgg(column='SkiableTerrain_ac', aggfunc='sum'),\n",
-    "    state_total_days_open=pd.NamedAgg(column=__, aggfunc='sum'),\n",
-    "    ___=pd.NamedAgg(column=___, aggfunc=___),\n",
-    "    ___=pd.NamedAgg(column=___, aggfunc=___)\n",
-    ").___\n",
+    "    state_total_days_open=pd.NamedAgg(column='daysOpenLastYear', aggfunc='sum'),\n",
+    "    state_total_terrain_parks=pd.NamedAgg(column='TerrainParks', aggfunc='sum'),\n",
+    "    state_total_nightskiing_ac=pd.NamedAgg(column='NightSkiing_ac', aggfunc='sum')\n",
+    ").reset_index()\n",
     "state_summary.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.NamedAgg()"
    ]
   },
   {
