--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -4712,7 +4712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -4741,13 +4741,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directory ../models was created.\n",
+      "Writing file.  \"../models/ski_resort_pricing_model.pkl\"\n"
+     ]
+    }
+   ],
    "source": [
     "# save the model\n",
     "\n",
@@ -4785,8 +4794,22 @@
     }
    },
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1**"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We start by considering the mean value as a predictor. We get a value of 63.81 for the ticket price. With this baseline model, we get a Coefficient of Determination of 0 or less. Then, we proceed to create our initial model. The first step is to impute the missing features from the dataset using the mean and median. Next, we scale the features and train the model. Using sklearn's \"pipeline,\" we can perform a median/mean comparison with fewer lines of code. We can conclude that by using the mean or median to impute missing values, we get identical values when assessing the performance of both models. We can select the K best features by using \"SelectKBest.\" After using cross-validation, we get that the best value for k is eight and that the most important feature in our model is \"vertical_drop\" followed by \"Snow Making_ac.\" It makes intuitive sense and is consistent with what we saw during the EDA work. Next, we build a new pipeline using a Random Forest Model and perform the same metric calculations. We can see that \"fastQuads\" and \"Runs\" are the most important features in this model. The Random Forest model has lower cross-validation mean absolute error by almost $1. This model we will be using for the rest of the project."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
